--- a/Проект SpeakFlu/SpeakFluently/src/main/resources/application.properties
+++ b/Проект SpeakFlu/SpeakFluently/src/main/resources/application.properties
@@ -14,3 +14,4 @@ spring.flyway.locations=classpath:DB.Migration/migration
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.open-in-view=false
